--- a/package/src/popup/popup.css
+++ b/package/src/popup/popup.css
@@ -4,13 +4,13 @@ body {
     padding: 10px;
     background-color: #333333;
     color: #ffffff;
-    width: 350px;
+    width: 300px;
     height: 400px;
     overflow-y: auto;
 }
 
 #popup-container {
-    padding: 10px;
+    margin: 5px;
 }
 
 h1 {
@@ -25,7 +25,7 @@ h1 {
 }
 
 .tab-item {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .tab-button {
@@ -35,7 +35,7 @@ h1 {
     color: #ffffff;
     border: none;
     border-radius: 6px;
-    padding: 10px;
+    padding: 5px;
     width: 100%;
     cursor: pointer;
     text-align: left;
